Work in progress - switch tp Jackson for serialisation / deserialisation
