# generator/src/main/java/com/provys/provysobject/generator/EntityGenerator.java
@@ -50,30 +50,6 @@ public interface EntityGenerator {
     String generateProxy(String entityNm, @Nullable String friendEntities);
 
     /**
-     * Generate JSON-B proxy adapter - adapter translates proxy to value object for marshalling, does not support
-     * unmarshalling
-     *
-     * @param entityNm is internal name of entity class should be based on
-     * @param friendEntities is comma separated list of internal names of entities under the same repository; generator
-     *                      generates getters returning object instead of just Id for foreign keys of these types
-     * @return source code for given class
-     */
-    @Nonnull
-    String generateJsonbProxyAdapter(String entityNm, @Nullable String friendEntities);
-
-    /**
-     * Generate JAXB proxy adapter - adapter translates proxy to value object for marshalling, does not support
-     * unmarshalling
-     *
-     * @param entityNm is internal name of entity class should be based on
-     * @param friendEntities is comma separated list of internal names of entities under the same repository; generator
-     *                      generates getters returning object instead of just Id for foreign keys of these types
-     * @return source code for given class
-     */
-    @Nonnull
-    String generateXmlProxyAdapter(String entityNm, @Nullable String friendEntities);
-
-    /**
      * Generate value class - whole value class is generated, potential logic is implemented in proxy
      *
      * @param entityNm is internal name of entity class should be based on
@@ -83,28 +59,6 @@ public interface EntityGenerator {
      */
     @Nonnull
     String generateValue(String entityNm, @Nullable String friendEntities);
-
-    /**
-     * Generate JSON-B value adapter - adapter translates value to value builder and vica versa
-     *
-     * @param entityNm is internal name of entity class should be based on
-     * @param friendEntities is comma separated list of internal names of entities under the same repository; generator
-     *                      generates getters returning object instead of just Id for foreign keys of these types
-     * @return source code for given class
-     */
-    @Nonnull
-    String generateJsonbValueAdapter(String entityNm, @Nullable String friendEntities);
-
-    /**
-     * Generate JAXB value adapter - adapter translates value to value builder and vica versa
-     *
-     * @param entityNm is internal name of entity class should be based on
-     * @param friendEntities is comma separated list of internal names of entities under the same repository; generator
-     *                      generates getters returning object instead of just Id for foreign keys of these types
-     * @return source code for given class
-     */
-    @Nonnull
-    String generateXmlValueAdapter(String entityNm, @Nullable String friendEntities);
 
     /**
      * Generate value builder class - whole value class is generated
