# restapi/src/main/webapp/openapi/openapi.json
@@ -76,176 +76,11 @@
         }
       }
     },
-    "/entity/{entityNm}/geninterface" : {
+    "/entity/{entityNm}/genproxy" : {
       "get" : {
-        "summary" : "Generate GenInterface",
-        "description" : "Generate generated ancestor of interface for accessing objects of given type, containing attribute getters",
-        "operationId" : "getGenInterface",
-        "parameters" : [ {
-          "name" : "entityNm",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "friendEntities",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "Class source",
-            "content" : {
-              "text/plain" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/entity/{entityNm}/loaderbase" : {
-      "get" : {
-        "summary" : "Generate Loader Base class",
-        "description" : "Generate loader base class - common ancestor for loaders for given entity.",
-        "operationId" : "getLoaderBase",
-        "parameters" : [ {
-          "name" : "entityNm",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "friendEntities",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "Class source",
-            "content" : {
-              "text/plain" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/entity/{entityNm}/dbloadrunner" : {
-      "get" : {
-        "summary" : "Generate DbLoadRunner class",
-        "description" : "Generate database load runner class - class that actually fetches data from database and converts them to value objects.",
-        "operationId" : "getDbLoadRunner",
-        "parameters" : [ {
-          "name" : "entityNm",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "friendEntities",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "Class source",
-            "content" : {
-              "text/plain" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/entity/{entityNm}/loader" : {
-      "get" : {
-        "summary" : "Generate Loader Interface",
-        "description" : "Generate loader interface - interface defining requirements for loader for given entity. Only used to initialize file if one doesn't exist, is not refreshed later",
-        "operationId" : "getLoaderInterface",
-        "parameters" : [ {
-          "name" : "entityNm",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "friendEntities",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "Class source",
-            "content" : {
-              "text/plain" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/entity/{entityNm}/xmlvalueadapter" : {
-      "get" : {
-        "summary" : "Generate JAXB Value Adapter",
-        "description" : "Generate JAXB value adapter - translates value to value builder for serialisation",
-        "operationId" : "getXmlValueAdapter",
-        "parameters" : [ {
-          "name" : "entityNm",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "friendEntities",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "Class source",
-            "content" : {
-              "text/plain" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/entity/{entityNm}/dbloader" : {
-      "get" : {
-        "summary" : "Generate DbLoader class",
-        "description" : "Generate database loader class - at the moment, does not generate load by methods.",
-        "operationId" : "getDbLoader",
+        "summary" : "Generate GenProxy",
+        "description" : "Generate generated proxy ancestor, implementing interface of given object in scope defined by generated interface",
+        "operationId" : "getGenProxy",
         "parameters" : [ {
           "name" : "entityNm",
           "in" : "path",
@@ -340,11 +175,11 @@
         }
       }
     },
-    "/entity/{entityNm}/genproxy" : {
+    "/entity/{entityNm}/geninterface" : {
       "get" : {
-        "summary" : "Generate GenProxy",
-        "description" : "Generate generated proxy ancestor, implementing interface of given object in scope defined by generated interface",
-        "operationId" : "getGenProxy",
+        "summary" : "Generate GenInterface",
+        "description" : "Generate generated ancestor of interface for accessing objects of given type, containing attribute getters",
+        "operationId" : "getGenInterface",
         "parameters" : [ {
           "name" : "entityNm",
           "in" : "path",
@@ -373,11 +208,11 @@
         }
       }
     },
-    "/entity/{entityNm}/xmlproxyadapter" : {
+    "/entity/{entityNm}/loader" : {
       "get" : {
-        "summary" : "Generate JAXB Proxy Adapter",
-        "description" : "Generate JAXB proxy adapter - translates proxy to value object for serialisation",
-        "operationId" : "getXmlProxyAdapter",
+        "summary" : "Generate Loader Interface",
+        "description" : "Generate loader interface - interface defining requirements for loader for given entity. Only used to initialize file if one doesn't exist, is not refreshed later",
+        "operationId" : "getLoaderInterface",
         "parameters" : [ {
           "name" : "entityNm",
           "in" : "path",
@@ -406,11 +241,77 @@
         }
       }
     },
-    "/entity/{entityNm}/jsonbproxyadapter" : {
+    "/entity/{entityNm}/loaderbase" : {
       "get" : {
-        "summary" : "Generate JSON-B Proxy Adapter",
-        "description" : "Generate JSON-B proxy adapter - translates proxy to value object for serialisation",
-        "operationId" : "getJsonbProxyAdapter",
+        "summary" : "Generate Loader Base class",
+        "description" : "Generate loader base class - common ancestor for loaders for given entity.",
+        "operationId" : "getLoaderBase",
+        "parameters" : [ {
+          "name" : "entityNm",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "friendEntities",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "description" : "Class source",
+            "content" : {
+              "text/plain" : {
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/entity/{entityNm}/dbloader" : {
+      "get" : {
+        "summary" : "Generate DbLoader class",
+        "description" : "Generate database loader class - at the moment, does not generate load by methods.",
+        "operationId" : "getDbLoader",
+        "parameters" : [ {
+          "name" : "entityNm",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "friendEntities",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "description" : "Class source",
+            "content" : {
+              "text/plain" : {
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/entity/{entityNm}/dbloadrunner" : {
+      "get" : {
+        "summary" : "Generate DbLoadRunner class",
+        "description" : "Generate database load runner class - class that actually fetches data from database and converts them to value objects.",
+        "operationId" : "getDbLoadRunner",
         "parameters" : [ {
           "name" : "entityNm",
           "in" : "path",
@@ -444,6 +345,39 @@
         "summary" : "Generate JSON-B Value Adapter",
         "description" : "Generate JSON-B value adapter - translates value to value builder for serialisation",
         "operationId" : "getJsonbValueAdapter",
+        "parameters" : [ {
+          "name" : "entityNm",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "friendEntities",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "description" : "Class source",
+            "content" : {
+              "text/plain" : {
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/entity/{entityNm}/jsonbproxyadapter" : {
+      "get" : {
+        "summary" : "Generate JSON-B Proxy Adapter",
+        "description" : "Generate JSON-B proxy adapter - translates proxy to value object for serialisation",
+        "operationId" : "getJsonbProxyAdapter",
         "parameters" : [ {
           "name" : "entityNm",
           "in" : "path",
